--- a/build.gradle
+++ b/build.gradle
@@ -72,6 +72,7 @@ project(":core") {
 
     dependencies {
         compile "com.badlogicgames.gdx:gdx:$gdxVersion"
+        implementation 'com.google.code.gson:gson:2.8.4'
         
     }
 }
