--- a/core/build.gradle
+++ b/core/build.gradle
@@ -5,6 +5,9 @@ sourceCompatibility = 1.8
 
 sourceSets.main.java.srcDirs = [ "src/" ]
 
+dependencies {
+    compile "com.badlogicgames.gdx:gdx-tools:$gdxVersion"
+}
 
 eclipse.project {
     name = appName + "-core"
